--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+	font-family: 'Montserrat', sans-serif;
+}
+
 header {
 	background: #BBBBBB;
 	padding: 20px 0;
@@ -94,8 +98,7 @@ footer {
 
 /*Páginda do Contato */
 main {
-	width: 940px;
-	margin: 0 auto;
+	
 }
 
 form {
@@ -157,4 +160,96 @@ thead {
 td, th {
 	border: 1px solid #000000;
 	padding: 8px 15px;
+}
+
+
+/* Página Inicial */
+
+.banner {
+	width: 100%;
+}
+
+.titulo-principal {
+	text-align: center;
+	font-size: 2em; /*Independente do tamanho em que o texto da página estiver, ele pega esse tamanho e dobra. Nova forma de proporção*/
+	margin: 0 0 1em; /*Dobro da fonte padrão do texto. Medida proporcional com CSS, como ja comentamos acima*/
+	clear: left;
+}
+
+.principal {
+	padding: 3em 0;
+	background: #FEFEFE;
+	width: 940px;
+	margin: 0 auto;
+}
+
+.principal p {
+	margin: 0 0 1em;
+}
+
+.principal strong {
+	font-weight: bold;
+}
+
+.principal em {
+	font-style: italic;
+}
+
+.utensilios {
+	width: 120px;
+	float: left;
+	margin: 0 20px 20px 0;
+}
+
+.mapa {
+	padding: 3em 0;
+	background: linear-gradient(#FEFEFE, #888888);	
+}
+
+.mapa-conteudo {
+	width: 940px;
+	margin: 0 auto;
+}
+
+.mapa p {
+	margin: 0 0 2em;
+	text-align: center;
+}
+
+
+.beneficios {
+	padding: 3em 0;
+	background: #888888;
+}
+
+.conteudo-beneficios {
+	width: 640px;
+	margin: 0 auto;
+}
+
+.lista-beneficios {
+	width: 40%;
+	display: inline-block; /*Ao chamar o inline-block, se atentar para ver se não tem espaço entre o final da lista e o link para a imagem no HTML*/
+	vertical-align: top;
+}
+
+.itens {
+	line-height: 1.5;
+}
+
+.itens:first-child { /*Pseudo-class - first-child vai alterar somente o PRIMEIRO item da nossa lista */
+	font-weight: bold;
+}
+
+.itens:before{
+	content: "🟊";
+}
+
+.imagem-beneficios {
+	width: 60%;
+}
+
+.video {
+    width: 560px;
+    margin: 2em auto;
 }
