--- a/style.css
+++ b/style.css
@@ -37,6 +37,8 @@ nav a:hover {
 	text-decoration: underline;
 }
 
+/*Páginda dos Produtos */
+
 .produtos {
 	width:  940px;
 	margin:  0 auto;
@@ -83,6 +85,8 @@ nav a:hover {
 	font-weight: bold;
 	margin-top: 10px;
 }
+
+/*Até aqui Produtos*/
 
 footer {
 	text-align: center;
@@ -247,9 +251,53 @@ td, th {
 
 .imagem-beneficios {
 	width: 60%;
+	opacity: 1;
+	transition: 400ms;
+	box-shadow: 10px 10px 10px #000000; /* Propriedades:  Eixo X, Y, a sombra sai do estado SOLIDO para o TRANSPARENTE e uma Cor*/
+										/*Outras sombras podem ser adicionadas*/
+}
+
+.imagem-beneficios:hover {
+	opacity: 0.3;
 }
 
 .video {
     width: 560px;
     margin: 2em auto;
+}
+
+/*Precisamos entregar paras as telas de até 480px um estilo diferente - Medias Querys */
+
+@media screen  and (max-width:  480px) {
+	.caixa, .principal, .conteudo-beneficios, .mapa-conteudo, .video {
+		width: auto;
+	}
+
+	h1 {
+		text-align: center;
+	}
+
+	nav {
+		position: static;
+	}d
+
+	.lista-beneficios, .imagem-beneficios, .produtos  {
+		width: 100%;
+	}
+
+	.produtos li {
+		display: block;
+		text-align: center;
+		margin: 10px 1.5% 10px 1.5%;
+		width: auto;
+	}
+
+	.input-padrao  {
+		margin: 10px 1.5% 10px 1.5%;
+	}
+
+	.enviar, .checkbox, .tabela, fieldset, form label {
+		margin: 0 1.5% 10px;
+	}
+	
 }
